styles/style.css
body {
    padding-top: 50px;
}

div:not(#upload, #new-item-img, #outfits, .bar, .item-input, #body-except-header) {
    border: 2px solid black;
}

#items-list, #history-container {
    white-space: pre;
}

header {
    position: fixed;
    z-index: 99;
    background-color: aliceblue;
    width: 100%;
    top: 0;
    left: 0;
    display: flex;
}

h1 {
    font-size: x-large;
    padding-left: 25px;
}

.hamburger {
    position: relative;
    display: block;
    width: 35px;
    cursor: pointer;
    appearance: none;
    background: none;
    outline: none;
    border: none;
}

/* Makes three hamburger lines */
.hamburger .bar, .hamburger:after, .hamburger:before {
    content: '';
    display: block;
    width: 100%;
    height:  5px;
    background-color: #000000;
    margin: 6px 8px;
    transition: 0.4s;
}

/* Twist top line*/
.hamburger.is-active:before {
    transform: rotate(45deg) translate(0px, 15px);
}

/* Make middle line disappear */
.hamburger.is-active .bar {
    opacity: 0;
}

/* Twist bottom line other direction*/
.hamburger.is-active:after {
    transform: rotate(-45deg) translate(0px, -16px);
}

.ham-nav {
    display: block;
    position: fixed;
    top: 0;
    right: 100%;
    width: 50%;
    min-height: 100vh;
    z-index: 98;
    background-color: rgb(200, 226, 249);
    padding-top: 120px;
    transition: 0.4s;
}

.ham-nav.is-active {
    right: 50%;
}

.ham-nav button {
    display: block;
    width: 100%;
    max-width: 200px;
    margin: 0 auto 16px;
    text-align: center;
    margin-bottom: 16px;
    padding: 12px 16px;
    background-color: rgb(255, 216, 255);

    color: black;
}

.ham-nav a:hover {
    background-color: lightgreen;
}

